# vlm-budget-eval

./: .gitignore  CLAUDE.md  INSIGHTS.md  README.md  ROADMAP.md  analyze_calibration.py  analyze_runs.py  budget_eval.py  experiment.ipynb  experiment_runner.py  pyproject.toml  review.md  run_abstention.py  run_dense_sweep.py  run_nudge.py  run_sweep.py  summarize_runs.py
docs/insights/: insights.md  insights_ko.md
references/: project.md  project_ko.md  roadmap.md  roadmap_ko.md
scripts/: analyze_abstention.py  analyze_abstention_phase1d.py  analyze_difficulty.py  analyze_runs.py  analyze_vstar.py  experiment_runner.py  preprocessing.py  preprocessing_masked.py  preprocessing_vstar.py  run_abstention.py  run_abstention_masked.py  run_abstention_sweep.py  run_dense_sweep.py  run_nudge.py  run_sweep.py  run_vstar_baseline.py  summarize_runs.py
src/vlm_budget_eval/: __init__.py  budget_eval.py
